--- a/new.html
+++ b/new.html
@@ -3,48 +3,219 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Odin Project</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/odin.css">
 </head>
 <body>
+    <div class="row border-top border-bottom">
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container">
+                <div class="col-lg-5">
+                    <a class="navbar-brand" href="#">The Odin Project</a>
+                  </div>
+                </div>
+                <div class="col-lg-7">
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav" >
+                        <a class="nav-link active pe-5" aria-current="page" href="#">All Paths</a>
+                        <a class="nav-link active pe-5" href="#">About</a>
+                        <a class="nav-link active pe-5" href="#">Community</a>
+                        <a class="nav-link active pe-5">Support us</a>
+                        <a class="nav-link active pe-5">Sign in</a>
+                        <button type="button" class="btn btn-success">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="mp">
+      <h1 class="text-center mt-5" style="font-size: 50px;">
+      <span style="color: rgb(24, 24, 77);">Your</span>
+      <span style="color: coral;">Carrer In Web Development</span></h1>
+    </div>
+    <h1 class="text-center" style="font-size: 50px;">
+      <span style=" color:rgb(24, 24, 77);">Starts Here</span>
+    </h1>
+    <h3 class="text-center" style="font-size: 25px;">
+      <span style="color: grey;">Our full stack curriculum is free and supported by a <br> passionate open source community.</span>
+    </h3>
+   <div class="mp2 text-center mt-5">
+    <button type="button" class="btn btn-outline-secondary">View Full Curriculum</button>
+   </div>
+   <div class="mp3">
+    <img src="./images/bg.svg" class="image-fluid" alt="">
+   </div>
+   <div class="row">
+    <div class="col-lg-12 text-center">
+      <h2>How it works</h2>
+    </div>
+    <div class="col-lg-12 text-center">
+      <h5 class="fw-light">This is the website we wish we had when we were learning on our own. We scour <br> the internet looking for only the best resources to supplement your learning and present them in a logical order.</h5>
+    </div>
+  </div>
+  <div class="container mt-3">
+    <div class="row text-center mt-3">
+      <div class="col-lg-4 mt-3">
+        <img src="./images/book.svg" alt="">
+        <h5 class="mt-3">Learn</h5>
+        <p>Learn from a curriculum with the best curated online tutorials, blogs, and courses.</p>
+      </div>
+      <div class="col-lg-4 mt-3">
+        <img src="./images/lap.svg" alt="">
+        <h5 class="mt-3">Build</h5>
+        <p>Build dozens of portfolio-worthy projects along the way, from simple scripts to full programs and deployed websites.</p>
+      </div>
+      <div class="col-lg-4">
+        <img src="./images/connect.svg" alt="">
+        <h5 class="mt-2">Connect</h5>
+        <p>You're not alone. Learn and get help from our friendly community of beginner and experienced developers.</p>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-light text-center mt-5">
     <div class="row">
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container">
-            <div class="col lg-5">
-            <a class="navbar-brand" href="#"><h4>The Odin Project</h4></a>
-        </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-       <div class="col lg-7 me-0">
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
+      <div class="col-lg-12 text-center">
+        <h3>Learn everything you need to know</h3>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-light">
+    <div class="row">
+      <div class="col-lg-12 text-center mt-3 d-flex justify-content-evenly">
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/css1.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Intermedite <br>  HTML and <br> CSS</h4>
           </div>
         </div>
-      </nav>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/css1.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Advanced <br>  HTML and <br> CSS</h4>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/database1.svg" class="card-img-top" style="width: 10rem; height:10rem;margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Databases</h4>
+          </div>
+        </div>
+      </div>
     </div>
-      <script src="./js/bootstrap.bundle.min.js"></script>
+    <div class="row">
+      <div class="col-lg-12 text-center mt-3 d-flex justify-content-evenly">
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/database2.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Databases</h4>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/js.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto" >
+          <div class="card-body">
+            <h4 class="card-text mt-3">Javascript</h4>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/react.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">React</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 text-center mt-3 d-flex justify-content-evenly">
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/node.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Node JS</h4>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/ruby.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Ruby on Rails</h4>
+          </div>
+        </div>
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/ruby2.svg" class="card-img-top" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Ruby</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 text-center mt-3 d-flex justify-content-evenly">
+        <div class="card text-center" style="width: 14rem; height:auto;">
+          <img src="./images/gett.svg" class="card-img-top ms-4" style="width: 10rem; height:10rem; margin:auto">
+          <div class="card-body">
+            <h4 class="card-text mt-3">Getting Hired</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mp4 text-center mt-5">
+      <button type="button" class="btn btn-outline-secondary">Explore Curriculum</button>
+    </div>
+  </div>
+  <div class="container-fluid mt-5">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Sucess Stories</h2>
+      </div>
+    </div>
+    <div class="container mt-3">
+      <div class="row mt-5">
+        <div class="col-lg-1">
+          <img src="./images/bruh.jpg" alt="" class="w-100" style="border-radius: 50%;">
+        </div>
+        <div class="col-lg-5">
+          <p><u>Rob Pando</u><br>
+          TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</p>
+        </div>
+        <div class="col-lg-1">
+          <img src="./images/cody.jpg" alt="" class="w-100" style="border-radius: 50%;">
+        </div>
+        <div class="col-lg-5">
+          <p><u>Cody Loyd</u><br>
+          TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</p>
+        </div>
+      </div>
+      <div class="row  mt-5">
+        <div class="col-lg-1">
+          <img src="./images/andrej.jpg" alt="" class="w-100" style="border-radius: 50%;">
+        </div>
+        <div class="col-lg-5">
+          <p><u>Andrej Dragojevic</u><br>
+          TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</p>
+        </div>
+        <div class="col-lg-1">
+          <img src="./images/skip.jpg" alt="" class="w-100" style="border-radius: 50%;">
+        </div>
+        <div class="col-lg-5">
+          <p><u>Skip Gibson</u><br>
+          TOP was a perfect match for my learning style. Not walking me through an entire project but actually forcing me to figure it out on my own, by pointing me...</p>
+        </div>
+      </div>
+    </div>
+    <div class="mp5 text-center mt-5">
+      <h4><u>Read more sucess stories</u></h4>
+    </div>
+    <div class="mp6 text-center mt-5">
+      <h2>Support Us!</h2>
+      <h6>The Odin Project is funded by the community. Join us in empowering learners <br> around the globe by supporting The Odin Project!</h6>
+      </div>
+    </div>
+  </div>
+  <div class="row text-center mt-3">
+    <div class="col-lg-12 text-center">
+      <button type="button" class="btn btn-outline-secondary">Learn More</button>
+      <button type="button" class="btn btn-success">Donate Now-></button>
+    </div>
+  </div>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
