--- a/allpaths.html
+++ b/allpaths.html
@@ -20,11 +20,11 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active pe-5" aria-current="page" href="./allpaths.html">All Paths</a>
-                        <a class="nav-link active pe-5" href="#">About</a>
-                        <a class="nav-link active pe-5" href="#">Community</a>
-                        <a class="nav-link active pe-5">Support us</a>
-                        <a class="nav-link active pe-5">Sign in</a>
-                        <button type="button" class="btn btn-success">Get Started</button>
+                        <a class="nav-link active pe-5" href="./about.html">About</a>
+                        <a class="nav-link active pe-5" href="https://discord.com/invite/fbFCkYabZB">Community</a>
+                        <a class="nav-link active pe-5" href="./support.html">Support</a>
+                        <a class="nav-link active pe-5" href="./sign.html">Sign in</a>
+                        <a href="./signu.html"><button type="button" class="btn btn-success">Get Started</button></a>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
             <div class="col-lg-3">
 
             </div>
-            <div class="col-lg-6 border">
+            <div class="col-lg-6 border" style="border-radius: 9px;">
                 <div class="row border-bottom">
                     <div class="col-lg-2">
                         <img src="./images/foundations.svg" alt="" class="w-100">
@@ -74,9 +74,9 @@
             <div class="col-lg-3">
 
             </div>
-            <div class="col-lg-6 ">
+            <div class="col-lg-6 "style="border-radius: 9px;">
                 <div class="row">
-                    <div class="col-lg-6 border text-center">
+                    <div class="col-lg-6 border text-center"style="border-radius: 9px;">
                         <img src="./images/rubyonrails.svg" alt="" class="w-25">
                         <div class="row">
                             <div class="col-lg-6 text-start">
@@ -105,9 +105,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 border">
+                    <div class="col-lg-6 border"style="border-radius: 9px;">
                         <div class="row">
-                            <div class="col-lg-6  text-center">
+                            <div class="col-lg-6  text-center"style="border-radius: 9px;">
                                 <img src="./images/jsss.svg" alt="" class="w-50 text-center" style="margin-left:100px">
                             </div>
                         </div>
@@ -152,75 +152,72 @@
 
 
 
-        <div class="container bg-light mt-5">
-            <div class="mp6 text-center pt-5">
-                <h2>Support Us!</h2>
-                <h6>The Odin Project is funded by the community. Join us in empowering learners <br> around the globe by
-                    supporting The Odin Project!</h6>
+        <div class="container-fluid bg-light">
+            <div class="mp5 text-center mt-5">
+              <h4><u>Read more sucess stories</u></h4>
             </div>
+            <div class="container bg-light mt-5">
+              <div class="mp6 text-center pt-5">
+                <h2 >Support Us!</h2>
+                <h6>The Odin Project is funded by the community. Join us in empowering learners <br> around the globe by supporting The Odin Project!</h6>
+                </div>
             <div class="row text-center mt-3">
-                <div class="col-lg-12 text-center">
-                    <button type="button" class="btn btn-outline-secondary">Learn More</button>
-                    <button type="button" class="btn btn-success">Donate Now-></button>
-                </div>
+              <div class="col-lg-12 text-center">
+                <button type="button" class="btn btn-outline-secondary">Learn More</button>
+                <button type="button" class="btn btn-success">Donate Now-></button>
+              </div>
             </div>
-            <div class="container-fluid text-secondary mt-5">
-                <div class="container mt-5 border-bottom">
-                    <div class="row mt-5">
-                        <div class="col-lg-4 mt-3 mb-3">
-                            <h3>The odin project</h3>
-                            <p>High quality coding education maintained by an open<br>source community.</p>
-                            <img src="./images/icons8-discord-30.png" alt="" class="me-3">
-                            <img src="./images/icons8-facebook-30.png" alt="" class="me-3">
-                            <img src="./images/icons8-github-30.png" alt="" class="me-3">
-                            <img src="./images/icons8-twitter-30.png" alt="" class="me-3">
-                        </div>
-                        <div class="col-lg-2">
-                            <ul style="list-style: none;">
-                                <li>
-                                    <h5>About us</h5>
-                                </li>
-                                <li>About</li class="mt-2">
-                                <li>Team</li class="mt-2">
-                                <li>Blog</li class="mt-2">
-                                <li>Sucess Stories</li class="mt-2">
-                            </ul>
-                        </div>
-                        <div class="col-lg-2">
-                            <ul style="list-style: none;">
-                                <li>
-                                    <h5>Support</h5>
-                                </li>
-                                <li>FAQ</li class="mt-2">
-                                <li>Contribute</li class="mt-2">
-                                <li>Contact Us</li class="mt-2">
-                            </ul>
-                        </div>
-                        <div class="col-lg-2">
-                            <ul style="list-style: none;">
-                                <li>
-                                    <h5>Guides</h5>
-                                </li>
-                                <li>Community Guides</li class="mt-2">
-                                <li>Installation Guides</li class="mt-2">
-                            </ul>
-                        </div>
-                        <div class="col-lg-1">
-                            <ul style="list-style: none;">
-                                <li>
-                                    <h5>Legal</h5>
-                                </li>
-                                <li>Terms </li class="mt-2">
-                                <li>Privacy</li class="mt-2">
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="mp7 ms-5">
-                    <p style="padding-left: 50px;">© 2024 The Odin Project. All rights reserved.</p>
-                </div>
-
             </div>
+        </div>
+          <div class="container-fluid text-secondary mt-5">
+            <div class="container mt-5 border-bottom">
+              <div class="row mt-5">
+                <div class="col-lg-4 mt-3 mb-3">
+                  <h3>The odin project</h3>
+                  <p>High quality coding education maintained by an open<br>source community.</p>
+                  <img src="./images/icons8-discord-30.png" alt="" class="me-3">
+                  <img src="./images/icons8-facebook-30.png" alt="" class="me-3">
+                  <img src="./images/icons8-github-30.png" alt="" class="me-3">
+                  <img src="./images/icons8-twitter-30.png" alt="" class="me-3">
+                </div>
+                <div class="col-lg-2">
+                <ul style="list-style: none;">
+                  <li><h5>About us</h5></li>
+                  <li>About</li class="mt-2">
+                  <li>Team</li class="mt-2">
+                  <li>Blog</li class="mt-2">
+                  <li>Sucess Stories</li class="mt-2">
+                </ul>
+              </div>
+              <div class="col-lg-2">
+                <ul style="list-style: none;">
+                  <li><h5>Support</h5></li>
+                  <li>FAQ</li class="mt-2">
+                  <li>Contribute</li class="mt-2">
+                  <li>Contact Us</li class="mt-2">
+                </ul>
+              </div>
+              <div class="col-lg-2">
+                <ul style="list-style: none;">
+                  <li><h5>Guides</h5></li>
+                  <li>Community Guides</li class="mt-2">
+                  <li>Installation Guides</li class="mt-2">
+                </ul>
+              </div>
+              <div class="col-lg-1">
+                <ul style="list-style: none;">
+                  <li><h5>Legal</h5></li>
+                  <li>Terms </li class="mt-2">
+                  <li>Privacy</li class="mt-2">
+                </ul>
+              </div>
+            </div>
+            </div>
+            <div class="mp7 ms-5">
+              <p>© 2024 The Odin Project. All rights reserved.</p>
+            </div>
+           
+          </div>
             <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
