--- a/new.html
+++ b/new.html
@@ -19,10 +19,10 @@
                         <div class="navbar-nav" >
                         <a class="nav-link active pe-5" aria-current="page" href="./allpaths.html">All Paths</a>
                         <a class="nav-link active pe-5" href="./about.html">About</a>
-                        <a class="nav-link active pe-5" href="#">Community</a>
-                        <a class="nav-link active pe-5">Support us</a>
-                        <a class="nav-link active pe-5">Sign in</a>
-                        <button type="button" class="btn btn-success">Get Started</button>
+                        <a class="nav-link active pe-5" href="https://discord.com/invite/fbFCkYabZB">Community</a>
+                        <a class="nav-link active pe-5" href="./support.html">Support</a>
+                        <a class="nav-link active pe-5" href="./sign.html">Sign in</a>
+                        <a href="./signu.html"><button type="button" class="btn btn-success">Get Started</button></a>
                         </div>
                     </div>
                 </div>
