--- a/about.html
+++ b/about.html
@@ -20,31 +20,146 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active pe-5" aria-current="page" href="./allpaths.html">All Paths</a>
-                        <a class="nav-link active pe-5" href="#">About</a>
-                        <a class="nav-link active pe-5" href="#">Community</a>
-                        <a class="nav-link active pe-5">Support us</a>
-                        <a class="nav-link active pe-5">Sign in</a>
-                        <button type="button" class="btn btn-success">Get Started</button>
+                        <a class="nav-link active pe-5" href="./about.html">About</a>
+                        <a class="nav-link active pe-5" href="https://discord.com/invite/fbFCkYabZB">Community</a>
+                        <a class="nav-link active pe-5" href="./support.html">Support</a>
+                        <a class="nav-link active pe-5" href="./sign.html">Sign in</a>
+                        <a href="./signu.html"><button type="button" class="btn btn-success">Get Started</button></a>
                     </div>
                 </div>
             </div>
     </div>
     </nav>
+
+
     <div class="container-fluid mt-5">
         <div class="container text-center">
-            <h3>About The Odin Project</h3>
-            <p>The Odin Project is one of those "What I wish I had when I was <br> learning" resources. Not everyone has access to a computer science education <br> or the funds to attend an intensive coding school and neither <br> of those is right for everyone anyway. This project is designed to fill in the gap for people who are trying to hack  it on their own but still want a high quality education.</p>
+            <div class="row">
+                <div class="col-lg-2">
+                </div>
+                <div class="col-lg-8">
+                    <h3>About The Odin Project</h3>
+                    <p>The Odin Project is one of those "What I wish I had when I was learning" resources. Not everyone
+                        has access to a computer science education or the funds to attend an intensive coding school and
+                        neither of those is right for everyone anyway. This project is designed to fill in the gap for
+                        people who are trying to hack it on their own but still want a high quality education.</p>
+                    <div class="row">
+                        <div class="col mt-5">
+                            <h3>What you can expect at The Odin Project</h3>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-lg-2">
+                            <img src="./images/book1.svg" alt="">
+                        </div>
+                        <div class="col-lg-9">
+                            <h5 class="text-start">A full roadmap to becoming a developer</h5>
+                            <p class="text-start">Our free, comprehensive curriculum will equip you to be a full stack
+                                developer, no matter your current experience level</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-lg-2">
+                            <img src="./images/learn.svg" alt="">
+                        </div>
+                        <div class="col-lg-9">
+                            <h5 class="text-start">Learn by doing</h5>
+                            <p class="text-start">The most effective learning happens while building projects, so we
+                                have strategically placed them throughout our curriculum. These projects will make a
+                                strong portfolio for you to showcase on your resume.</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-lg-2">
+                            <img src="./images/peoplr.svg" alt="">
+                        </div>
+                        <div class="col-lg-9">
+                            <h5 class="text-start">Receive support from others</h5>
+                            <p class="text-start">The maintainers of the curriculum run a Discord community, with the
+                                help of countless other volunteers, where you can receive help with anything in our
+                                curriculum.</p>
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-lg-2">
+                            <img src="./images/community.svg" alt="">
+                        </div>
+                        <div class="col-lg-9">
+                            <h5 class="text-start">
+                                Open source and community driven</h5>
+                            <p class="text-start">You can deepen your understanding and improve your GitHub skills by
+                                contributing to our open source curriculum and helping others in our Discord community.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        
+    </div>
+    <div class="container-fluid">
+        <div class="container bg-light">
+            <div class="row mt-5">
+                <div class="col-lg-12 text-center mt-5">
+                    <h3>Overview of The Odin Project</h3>
+                </div>
+            </div>
+            <div class="row text-center mt-5">
+                <div class="col-lg-3 bg-light p-4 me-5 ms-5 border text-center" style="border-radius: 8px;">
+                    <h3>135,568,22</h3>
+                    <h5>Learners</h5>
+                </div>
+                <div class="col-lg-3 bg-light p-4 me-5 ms-5 border text-center" style="border-radius: 8px;">
+                    <h3>5000+</h3>
+                    <h5>Contributors</h5>
+                </div>
+                <div class="col-lg-3 bg-light p-4 me-5 ms-5 border text-center" style="border-radius: 8px;">
+                    <h3>2013</h3>
+                    <h5>Funded</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-7 border mt-5 me-3"style="border-radius: 8px;">
+                    <h3 class="mt-5">Origin of The Odin Project</h3>
+                    <p class="mt-5">The Odin Project provides a free open source coding curriculum that can be taken entirely online. Since its inception, it has helped many students get hired as developers and has assisted countless others in learning enough programming to work on their own personal projects.
+                        Erik Trautman founded The Odin Project in 2013. Currently it is maintained and continually improved by a team of volunteers many of whom learned to code with us. Many find success from Odin Project's curriculum because of its hands-on approach with learning and emphasis on building projects. The curriculum is meticulously curated to ensure the content is up-to-date.</p>
+                </div>
+                <div class="col-lg-4 border mt-5" style="border-radius: 10px;">
+                    <h3 class="mt-5">Open Source</h3>
+                    <p class="mt-5">This website and the curriculum it hosts are completely open source. That means anyone can work on new features or fix existing bugs on the website. This also extends to the curriculum itself, anyone can work on new lessons, add new resources and improve existing lessons.
+
+                        The Odin Project would not be possible without the hard work of contributors from all across the world. If you're interested in helping us make The Odin Project better, please find out how to contribute.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6 text-center">
+                <img src="./images/picic.jpg" alt="">
+            </div>
+            <div class="col-lg-4 text-center mt-5">
+                <h3 class="mt-5">Want to contact us?</h3>
+                <p class="mt-5">Connect with our friendly community on discord, a chat and networking platform or send us an email.Connect with our friendly community on discord, a chat and networking platform or send us an email.</p>
+                <button type="button" class="btn btn-light">Chat on Discord</button>
+            </div>
+        </div>
     </div>
 
 
 
-
-
-
-
-
+    <div class="container-fluid bg-light">
+        <div class="container bg-light mt-5">
+            <div class="mp6 text-center pt-5">
+                <h6>If you want to give back to our community, you can do so by contributing to <br> our open source projects, or by supporting us financially</h6>
+            </div>
+            <div class="row text-center mt-3">
+                <div class="col-lg-12 text-center">
+                    <button type="button" class="btn btn-success">Contribute</button>
+                    <button type="button" class="btn btn-success">Donate</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid text-secondary mt-5">
         <div class="container mt-5 border-bottom">
             <div class="row mt-5">
