--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href=""></a></li>
+        <li><a href="./new.html"> WORK</a></li>
     </ul>
 </body>
 </html>
